--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
     "@babel/cli": "^7.0.0-beta.40",
     "@babel/core": "^7.0.0-beta.40",
     "@babel/preset-env": "^7.0.0-beta.40",
-    "babel-loader": "^8.0.0-beta.0",
+    "babel-loader": "^8.0.0",
     "standard": "^11.0.0",
-    "webpack": "^4.1.1",
-    "webpack-cli": "^2.0.11"
+    "webpack": "4.1.1",
+    "webpack-cli": "2.0.11"
   },
   "standard": {
     "env": "browser"
